# conductor-bridge-mvp

./: .gitignore  GEMINI.md  README.md  pyproject.toml
.cursor/: mcp.json
conductor_bridge/: __init__.py  autopilot.py  conductor_cli_driver.py  gemini_client.py  implementer.py  quality_gate.py  reviewer.py  runner.py  server.py  shell_safety.py  state.py  textio.py
scripts/: auto-commit.ps1  auto-push-branch.ps1  bootstrap.ps1  start-mcp-stdio.cmd  test-mcp.ps1  venv.ps1
state/: events.jsonl  state.json
state/artifacts/: handoff.md  plan.md  review.md
tests/: test_quality_and_review.py  test_shell_safety.py
