[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor-bridge"
version = "0.1.0"
description = "MCP hub for Gemini Conductor <-> Implementer orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Conductor Bridge"}
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
conductor-bridge-server = "conductor_bridge.server:main"
conductor-bridge-runner = "conductor_bridge.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["conductor_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
